Add first test to demonstrate testing approach.